--- a/sponsor.html
+++ b/sponsor.html
@@ -65,35 +65,46 @@
                     </div>
                     <div class="modal-body">
                         <div class="sponsor_options_menu_options">
-                            <img class="sponsor_options_menu_images" src="assets/sponsor_option_logo.png" alt="Sponsor Logo Placement">
-                            <p class="sponsor_options_menu_titles">Buy a logo on a placed product!</p>
+                            <img class="sponsor_options_menu_images" src="assets/sponsor_option_product_placement.png" alt="Sponsor Product Placement">
+                            <p class="sponsor_options_menu_titles">Product Placement</p>
                             <p class="sponsor_options_menu_values">$</p>
-                            <p class="sponsor_options_menu_descriptions">Thank you for sponsoring Shameless Product Placement!</p>
+                            <p class="sponsor_options_menu_descriptions">Unlock endless possibilities by having your product or logo be featured in our games.</p>
                             <p class="sponsor_options_menu_benefits_title">Benefits:</p>
                             <ul class="sponsor_options_menu_benefits">
-                                <li>Your product's logo placed on a product in-game!</li>
+                                <li>Your product or logo placed in-game!</li>
                                 <li>Our gratitude</li>
                             </ul>
                         </div>
                         <div class="sponsor_options_menu_options">
-                            <img class="sponsor_options_menu_images" src="assets/sponsor_option_billboard.png" alt="Sponsor Billboard Placement">
-                            <p class="sponsor_options_menu_titles">Buy an advertisement on a billboard!</p>
+                            <img class="sponsor_options_menu_images" src="assets/sponsor_option_character.png" alt="Sponsor Character">
+                            <p class="sponsor_options_menu_titles">Create a character!</p>
                             <p class="sponsor_options_menu_values">$</p>
-                            <p class="sponsor_options_menu_descriptions">Thank you for sponsoring Shameless Product Placement!</p>
+                            <p class="sponsor_options_menu_descriptions">People love characters they identify with. Create a character that represents your brand to be featured in our game.</p>
                             <p class="sponsor_options_menu_benefits_title">Benefits:</p>
                             <ul class="sponsor_options_menu_benefits">
-                                <li>Your advertisement placed on a billboard in-game!</li>
+                                <li>Your character placed in-game!</li>
                                 <li>Our gratitude</li>
                             </ul>
                         </div>
                         <div class="sponsor_options_menu_options">
-                            <img class="sponsor_options_menu_images" src="assets/sponsor_option_cutscene.png" alt="Sponsor Cutscene Placement">
-                            <p class="sponsor_options_menu_titles">Buy product placement during a main cutscene!</p>
+                            <img class="sponsor_options_menu_images" src="assets/sponsor_option_collectible.png" alt="Sponsor Collectible">
+                            <p class="sponsor_options_menu_titles">Create a collectible or NFT!</p>
                             <p class="sponsor_options_menu_values">$</p>
-                            <p class="sponsor_options_menu_descriptions">Thank you for sponsoring Shameless Product Placement!</p>
+                            <p class="sponsor_options_menu_descriptions">You can create a collectable or NFT representing your brand for the playerbase to enjoy and showcase!</p>
                             <p class="sponsor_options_menu_benefits_title">Benefits:</p>
                             <ul class="sponsor_options_menu_benefits">
-                                <li>Your product placed in-game during a main cutscene!</li>
+                                <li>Your created collectible integrated into our game in a way of your choosing!</li>
+                                <li>Our gratitude</li>
+                            </ul>
+                        </div>
+                        <div class="sponsor_options_menu_options">
+                            <img class="sponsor_options_menu_images" src="assets/sponsor_option_game_level.png" alt="Sponsor Game Level">
+                            <p class="sponsor_options_menu_titles">Create a game level!</p>
+                            <p class="sponsor_options_menu_values">$</p>
+                            <p class="sponsor_options_menu_descriptions">Your advertisement will no longer be a chore to view, as the content is now your advertisement! The players must interact with your brand if it is the content itself!</p>
+                            <p class="sponsor_options_menu_benefits_title">Benefits:</p>
+                            <ul class="sponsor_options_menu_benefits">
+                                <li>Your created level placed in-game!</li>
                                 <li>Our gratitude</li>
                             </ul>
                         </div>
