--- a/home.html
+++ b/home.html
@@ -31,8 +31,46 @@
             </div>
         </header>
         <div class="content">
-            <div class="">
-                
+            <video src="assets/home.mp4" id="background_video" muted loop autoplay></video>
+            <div class="home_details">
+                <a href="home.html">
+                    <img id="shameless_product_placement_logo" src="assets/shameless_product_placement_logo.png" alt="Shameless Product Placement Logo">
+                </a>
+                <p id="home_title">HOME</p>
+                <p id="home_text">We shamelessly promote.</p>
+                <div class="scroll">
+                    <a href="#scrollable_area"><p id="scroll_text">LEARN MORE!</p></a>
+                </div>
+                <div class="scrollable_area" id="scrollable_area">
+                    <p id="story_title">OUR STORY</p>
+                    <div class="description_section">
+                        <p class="section_titles">What is Shameless Product Placement?</p>
+                        <div class="description">
+                            <p>Shameless Product Placement is the newest, most revolutionary step in advertisement! We work with advertisers and allow them to place virtual advertisements fully integrated within our game, completely eliminating the ideology that advertisements are "to be skipped" if they are a core part of the game! We work with game developers who want to add a source of revenue into their game, by adding virtual advertising to it!</p>
+                        </div>
+                    </div>
+                    <div class="team_section">
+                        <p class="section_titles">Who are we?</p>
+                        <div class="people">
+                            <img id="ceo" src="assets/charles_conlan.png" alt="Charles J. Conlan">
+                            <div class="ceo_information">
+                            <p class="name_titles" id="ceo_name">CEO Charles J. Conlan</p>
+                            <p class="section_information" id="ceo_information">
+                                Hey there! With a background rooted in game design at Champlain College, I've honed my skills in crafting immersive and engaging digital experiences. My journey began with a passion for merging creativity with technology, shaping me into a visionary leader within the interactive entertainment industry. At Shameless Product Placement, we innovate by seamlessly integrating branded content into gaming narratives, redefining how companies connect with audiences in the digital age. Our mission is to pioneer new frontiers in marketing while delivering compelling gameplay that resonates with players worldwide. Join us as we revolutionize the intersection of gaming and advertising, setting new standards for interactive storytelling.
+                            </p>
+                            </div>
+                        </div>
+                        <div class="people">
+                            <img id="game_developer" src="assets/game_designer.png" alt="Game Designer">
+                            <div class="game_developer_information">
+                                <p class="name_titles" id="game_developer_name">Game Developer</p>
+                                <p class="section_information" id="game_developer_information">
+                                    Hey there, I'm ___, a game developer here at Shameless Product Placement. Armed with a passion for gaming and a knack for coding, I'm part of a talented team dedicated to creating innovative and captivating digital experiences. My journey into game development started with a fascination for how technology can bring stories to life and evolved through hands-on experience at leading studios. At Shameless, I thrive on integrating engaging gameplay mechanics with strategic brand placements, ensuring our games not only entertain but also resonate with diverse audiences. Collaborating closely with designers and marketers, I contribute to crafting seamless narratives that seamlessly blend entertainment with promotional content, pushing the boundaries of interactive advertising. Join us in exploring the limitless possibilities at the intersection of gaming and marketing!
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <script src="menu.js"></script>
