Fixed home page prototype 1

--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
                 <p id="home_title">HOME</p>
                 <p id="home_text">We shamelessly promote.</p>
                 <div class="scroll">
-                    <a href="#scrollable_area"><p id="scroll_text">LEARN MORE!</p></a>
+                    <a id="scroll" href="#scrollable_area"><img id="down_arrow" src="assets/down_arrow.png" alt="Down Arrow"></a>
                 </div>
                 <div class="scrollable_area" id="scrollable_area">
                     <p id="story_title">OUR STORY</p>
