Updated logo and formatting

--- a/investor.html
+++ b/investor.html
@@ -44,7 +44,7 @@
                         <p id="description">World class gaming meets brand promotion.</p>
                         <p id="invested">$_ USD from _ backers</p>
                         <button id="options" data-toggle="modal" data-target="#projects_menu">PROJECTS TO INVEST IN</button>
-                        <a href="#contact_form_background"><button id="information">GET INFORMATION</button></a>
+                        <a href="contact.html"><button id="information">GET INFORMATION</button></a>
                     </div>
                 </div>
             </div>
