Updated home page prototype, formatting

--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="">
+        <link rel="icon" href="assets/shameless_product_placement_icon.png">
         <link rel="stylesheet" href="menu.css">
         <link rel="stylesheet" href="home.css">
         <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
@@ -23,9 +23,9 @@
                     <li><a href="home.html">HOME</a></li>
                     <li><a href="sponsor.html">SPONSOR</a></li>
                     <li><a href="investor.html">INVESTOR</a></li>
-                    <li><a href="#">PARTNER</a></li>
+                    <li><a href="partner.html">PARTNER</a></li>
                     <li><a href="#">MERCHANDISE</a></li>
-                    <li><a href="#">CAREERS</a></li>
+                    <li><a href="careers.html">CAREERS</a></li>
                     <li><a href="contact.html">CONTACT US</a></li>
                 </ul>
             </div>
@@ -52,7 +52,7 @@
                     <div class="team_section">
                         <p class="section_titles">Who are we?</p>
                         <div class="people">
-                            <img id="ceo" src="assets/charles_conlan.png" alt="Charles J. Conlan">
+                            <img class="people_images" id="ceo" src="assets/charles_conlan.png" alt="Charles J. Conlan">
                             <div class="ceo_information">
                             <p class="name_titles" id="ceo_name">CEO Charles J. Conlan</p>
                             <p class="section_information" id="ceo_information">
@@ -61,12 +61,37 @@
                             </div>
                         </div>
                         <div class="people">
-                            <img id="game_developer" src="assets/game_designer.png" alt="Game Designer">
-                            <div class="game_developer_information">
-                                <p class="name_titles" id="game_developer_name">Game Developer</p>
+                            <img class="people_images" id="marketer" src="assets/joe_conlan.png" alt="Joe Conlan">
+                            <div class="marketer_information">
+                                <p class="name_titles" id="marketer_name">Joe Conlan</p>
                                 <p class="section_information" id="game_developer_information">
-                                    Hey there, I'm ___, a game developer here at Shameless Product Placement. Armed with a passion for gaming and a knack for coding, I'm part of a talented team dedicated to creating innovative and captivating digital experiences. My journey into game development started with a fascination for how technology can bring stories to life and evolved through hands-on experience at leading studios. At Shameless, I thrive on integrating engaging gameplay mechanics with strategic brand placements, ensuring our games not only entertain but also resonate with diverse audiences. Collaborating closely with designers and marketers, I contribute to crafting seamless narratives that seamlessly blend entertainment with promotional content, pushing the boundaries of interactive advertising. Join us in exploring the limitless possibilities at the intersection of gaming and marketing!
+                                    Hey there, I'm Joe Conlan, a marketer here at Shameless Product Placement. Armed with a passion for gaming and a knack for coding, I'm part of a talented team dedicated to creating innovative and captivating digital experiences. My journey into game development started with a fascination for how technology can bring stories to life and evolved through hands-on experience at leading studios. At Shameless, I thrive on integrating engaging gameplay mechanics with strategic brand placements, ensuring our games not only entertain but also resonate with diverse audiences. Collaborating closely with designers and marketers, I contribute to crafting seamless narratives that seamlessly blend entertainment with promotional content, pushing the boundaries of interactive advertising. Join us in exploring the limitless possibilities at the intersection of gaming and marketing!
                                 </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="game_section">
+                        <p class="section_titles">Our games</p>
+                        <div class="games">
+                            <div class="games_header">
+                                <div class="games_text">
+                                    <hr>
+                                    <p class="games_titles">Shih Zoo</p>
+                                    <p class="games_descriptions">A compelling story game that allows you to explore the Shih Zoo as a cutesy shih tzu!</p>
+                                    <a href="index.html"><button class="games_buttons" id="shih_zoo_button">VIEW GAME</button></a>
+                                </div>
+                                <img id="shih_zoo_logo" class="games_logos" src="assets/shih_zoo_logo.png" alt="Shih Zoo Logo">
+                            </div>
+                        </div>
+                        <div class="games">
+                            <div class="games_header">
+                                <div class="games_text">
+                                    <hr>
+                                    <p class="games_titles">Les Dudes</p>
+                                    <p class="games_descriptions">Les Dudes is a ___.</p>
+                                    <a href="index.html"><button class="games_buttons" id="les_dudes_button">VIEW GAME</button></a>
+                                </div>
+                                <img id="les_dudes_logo" class="games_logos" src="assets/les_dudes_coming_soon.png" alt="Les Dudes Logo">
                             </div>
                         </div>
                     </div>
