--- a/sponsor.html
+++ b/sponsor.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="">
+        <link rel="icon" href="assets/shameless_product_placement_icon.png">
         <link rel="stylesheet" href="menu.css">
         <link rel="stylesheet" href="sponsor.css">
         <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
@@ -23,9 +23,9 @@
                     <li><a href="home.html">HOME</a></li>
                     <li><a href="sponsor.html">SPONSOR</a></li>
                     <li><a href="investor.html">INVESTOR</a></li>
-                    <li><a href="#">PARTNER</a></li>
+                    <li><a href="partner.html">PARTNER</a></li>
                     <li><a href="#">MERCHANDISE</a></li>
-                    <li><a href="#">CAREERS</a></li>
+                    <li><a href="careers.html">CAREERS</a></li>
                     <li><a href="contact.html">CONTACT US</a></li>
                 </ul>
             </div>
