--- a/careers.html
+++ b/careers.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="assets/shih_zoo_icon.png">
+        <link rel="icon" href="assets/shameless_product_placement_icon.png">
         <link rel="stylesheet" href="menu.css">
-        <link rel="stylesheet" href="consumer.css">
+        <link rel="stylesheet" href="careers.css">
+        <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
         <title>Shameless Product Placement</title>
     </head>
@@ -30,15 +31,12 @@
             </div>
         </header>
         <div class="content">
-            <a href="index.html">
-                <img id="shameless_product_placement_logo" src="assets/shameless_product_placement_logo.png" alt="Shameless Product Placement Logo">
-            </a>
-            <img id="shih_tzu" src="assets/shih_tzu.png" alt="Shih Tzu">
-            <img id="shih_zoo_logo" src="assets/shih_zoo_logo.png" alt="Shih Zoo Logo">
-            <img id="download_button_apple" src="assets/download_button_apple.png" alt="Shih Zoo Download">
-            <img id="les_dudes_coming_soon" src="assets/les_dudes_coming_soon.png" alt="Les Dudes Coming Soon">
+            
         </div>
         <script src="menu.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     </body>
 </html>
