Careers page prototype 1

--- a/careers.html
+++ b/careers.html
@@ -31,9 +31,186 @@
             </div>
         </header>
         <div class="content">
-            
+            <video src="assets/careers_background.mp4" id="background_video" muted loop autoplay></video>
+            <div class="careers_details">
+                <a href="home.html">
+                    <img id="shameless_product_placement_logo" src="assets/shameless_product_placement_logo.png" alt="Shameless Product Placement Logo">
+                </a>
+                <p id="careers_text">Join us on our shameless journey.</p>
+                <p id="careers_subtext">Click below to explore internship opportunities.</p>
+                <div class="scrollable_area" id="scrollable_area">
+                    <div class="careers_career">
+                        <button id="game_designer" class="careers_buttons">Game Designer</button><br>
+                        <magic-slide closed class="careers_extensions" id="game_designer_extension">
+                            <div class="careers_descriptions" id="game_designer_description">
+                                <div class="careers_text">
+                                    <p class="careers_main_text">Unleash your potential in game design.</p>
+                                    <p class="careers_skills_titles">Skills needed:</p>
+                                    <ul class="careers_skills_list">
+                                        <li>Proficiency in basic coding languages (C#, C++)</li>
+                                        <li>Proficiency in game engines (Unity, Unreal Engine, etc.)</li>
+                                        <li>Ability to design levels</li>
+                                        <li>Ability to collaborate with a team</li>
+                                        <li>Experience with system design</li>
+                                        <li>Experience with game mechanics</li>
+                                        <li>Optional: Knowledge of 2D and 3D art creation tools (Maya, Illustrator, Photoshop, Blender, etc.)</li>
+                                    </ul>
+                                    <a href="contact.html"><button class="careers_apply_buttons">APPLY</button></a>
+                                </div>
+                                <img id="game_designer_image" class="careers_images" src="assets/game_designer.png" alt="Game Designer">
+                            </div>
+                        </magic-slide>
+                    </div>
+                    <div class="careers_career">
+                        <button id="game_programmer" class="careers_buttons">Game Programmer</button><br>
+                        <magic-slide closed class="careers_extensions" id="game_programmer_extension">
+                            <div class="careers_descriptions" id="game_programmer_description">
+                                <div class="careers_text">
+                                    <p class="careers_main_text">Embark on a programming adventure!</p>
+                                    <p class="careers_skills_titles">Skills needed:</p>
+                                    <ul class="careers_skills_list">
+                                        <li>Proficiency in basic coding languages (C#, C++, Java, etc.)</li>
+                                        <li>Proficiency in game engines (Unity, Unreal Engine, etc.)</li>
+                                        <li>Proficiency in Visual Studio</li>
+                                        <li>Ability to understand game architecture, algorithms, and data structures</li>
+                                        <li>Ability to collaborate with a team</li>
+                                        <li>Experience with debugging</li>
+                                    </ul>
+                                    <a href="contact.html"><button class="careers_apply_buttons">APPLY</button></a>
+                                </div>
+                                <img id="game_programmer_image" class="careers_images" src="assets/game_programmer.png" alt="Game Programmer">
+                            </div>
+                        </magic-slide>
+                    </div>
+                    <div class="careers_career">
+                        <button id="game_artist" class="careers_buttons">Game Artist</button><br>
+                        <magic-slide closed class="careers_extensions" id="game_artist_extension">
+                            <div class="careers_descriptions" id="game_artist_description">
+                                <div class="careers_text">
+                                    <p class="careers_main_text">Dive into creativity with game artistry!</p>
+                                    <p class="careers_skills_titles">Skills needed:</p>
+                                    <ul class="careers_skills_list">
+                                        <li>Proficiency in digital art tools (Maya, Illustrator, Photoshop, Blender, etc.)</li>
+                                        <li>Ability to create concept art of characters, environments, and props</li>
+                                        <li>Ability to understand color theory, composition, and visual storytelling</li>
+                                        <li>Ability to collaborate with a team</li>
+                                        <li>Familiarity with game engines (Unity, Unreal Engine, etc.)</li>
+                                    </ul>
+                                    <a href="contact.html"><button class="careers_apply_buttons">APPLY</button></a>
+                                </div>
+                                <img id="game_artist_image" class="careers_images" src="assets/game_artist.png" alt="Game Artist">
+                            </div>
+                        </magic-slide>
+                    </div>
+                    <div class="careers_career">
+                        <button id="sound_designer" class="careers_buttons">Sound Designer</button><br>
+                        <magic-slide closed class="careers_extensions" id="sound_designer_extension">
+                            <div class="careers_descriptions" id="sound_designer_description">
+                                <div class="careers_text">
+                                    <p class="careers_main_text">Immerse players in a story with sound!</p>
+                                    <p class="careers_skills_titles">Skills needed:</p>
+                                    <ul class="careers_skills_list">
+                                        <li>Proficiency in digital audio workstations (Pro Tools, Logic Pro, Reaper, etc.)</li>
+                                        <li>Ability to create and implement sound effects and music compositions</li>
+                                        <li>Ability to understand sound design principles (spatialization, mixing, mastering)</li>
+                                        <li>Ability to collaborate with a team</li>
+                                        <li>Familiarity with game engines (Unity, Unreal Engine, etc.)</li>
+                                        <li>Passion for creating immersive audio experiences</li>
+                                    </ul>
+                                    <a href="contact.html"><button class="careers_apply_buttons">APPLY</button></a>
+                                </div>
+                                <img id="sound_designer_image" class="careers_images" src="assets/sound_designer.png" alt="Sound Designer">
+                            </div>
+                        </magic-slide>
+                    </div>
+                    <div class="careers_career">
+                        <button id="web_designer" class="careers_buttons">Web Designer</button><br>
+                        <magic-slide closed class="careers_extensions" id="web_designer_extension">
+                            <div class="careers_descriptions" id="web_designer_description">
+                                <div class="careers_text">
+                                    <p class="careers_main_text">Mold the user's digital experience!</p>
+                                    <p class="careers_skills_titles">Skills needed:</p>
+                                    <ul class="careers_skills_list">
+                                        <li>Proficiency in front end languages (HTML, CSS, JavaScript, etc.)</li>
+                                        <li>Familiarity with frameworks (Bootstrap, Foundation, etc.)</li>
+                                        <li>Ability to understand user experience and interface principles</li>
+                                        <li>Ability to collaborate with a team</li>
+                                        <li>Optional: Knowledge of 2D art creation tools (Illustrator, Photoshop, XD, etc.)</li>
+                                    </ul>
+                                    <a href="contact.html"><button class="careers_apply_buttons">APPLY</button></a>
+                                </div>
+                                <img id="web_designer_image" class="careers_images" src="assets/web_designer.png" alt="Web Designer">
+                            </div>
+                        </magic-slide>
+                    </div>
+                    <div class="careers_career">
+                        <button id="game_tester" class="careers_buttons">Game Tester</button><br>
+                        <magic-slide closed class="careers_extensions" id="game_tester_extension">
+                            <div class="careers_descriptions" id="game_tester_description">
+                                <div class="careers_text">
+                                    <p class="careers_main_text">Test the future: one game at a time!</p>
+                                    <p class="careers_skills_titles">Skills needed:</p>
+                                    <ul class="careers_skills_list">
+                                        <li>Familiarity with various game platforms and mechanics</li>
+                                        <li>Ability to solve problems</li>
+                                        <li>Ability to communicate clear and concise feedback</li>
+                                        <li>Knowledge of basic game development processes and terminology</li>
+                                    </ul>
+                                    <a href="contact.html"><button class="careers_apply_buttons">APPLY</button></a>
+                                </div>
+                                <img id="game_tester_image" class="careers_images" src="assets/game_tester.png" alt="Game Tester">
+                            </div>
+                        </magic-slide>
+                    </div>
+                    <div class="careers_career">
+                        <button id="financier" class="careers_buttons">Financier</button><br>
+                        <magic-slide closed class="careers_extensions" id="financier_extension">
+                            <div class="careers_descriptions" id="financier_description">
+                                <div class="careers_text">
+                                    <p class="careers_main_text">Drive financial excellence strategically.</p>
+                                    <p class="careers_skills_titles">Skills needed:</p>
+                                    <ul class="careers_skills_list">
+                                        <li>Proficiency in financial modeling, analysis, and reporting</li>
+                                        <li>Familiarity with accounting principles</li>
+                                        <li>Familiarity with financial statement analysis</li>
+                                        <li>Ability to collaborate with a team</li>
+                                        <li>Ability to organize and attend to detail</li>
+                                        <li>Knowledge of basic technology and cryptocurrency (Blockchain, etc.)</li>
+                                    </ul>
+                                    <a href="contact.html"><button class="careers_apply_buttons">APPLY</button></a>
+                                </div>
+                                <img id="financier_image" class="careers_images" src="assets/financier.png" alt="Financier">
+                            </div>
+                        </magic-slide>
+                    </div>
+                    <div class="careers_career">
+                        <button id="marketer" class="careers_buttons">Marketer</button><br>
+                        <magic-slide closed class="careers_extensions" id="marketer_extension">
+                            <div class="careers_descriptions" id="marketer_description">
+                                <div class="careers_text">
+                                    <p class="careers_main_text">Connect brands with hearts and minds!</p>
+                                    <p class="careers_skills_titles">Skills needed:</p>
+                                    <ul class="careers_skills_list">
+                                        <li>Proficiency in marketing data analysis</li>
+                                        <li>Familiarity with social media and digital marketing strategies (Instagram, Tik Tok, etc.)</li>
+                                        <li>Ability to collaborate with a team</li>
+                                        <li>Knowledge of basic marketing principles and strategies</li>
+                                    </ul>
+                                    <a href="contact.html"><button class="careers_apply_buttons">APPLY</button></a>
+                                </div>
+                                <img id="marketer_image" class="careers_images" src="assets/marketer.png" alt="Marketer">
+                            </div>
+                        </magic-slide>
+                    </div>
+                    <div class="careers_why">
+                        <p id="careers_why_title">Why intern for us?</p>
+                        <p id="careers_why_text">You'll gain hands-on experience as you collaborate to develop a prototype of a video game that pushes the boundaries of innovation.</p>
+                    </div>
+                </div>
+            </div>
         </div>
         <script src="menu.js"></script>
+        <script src="careers.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
