Careers page prototype 1

--- a/careers.html
+++ b/careers.html
@@ -204,7 +204,12 @@
                     </div>
                     <div class="careers_why">
                         <p id="careers_why_title">Why intern for us?</p>
-                        <p id="careers_why_text">You'll gain hands-on experience as you collaborate to develop a prototype of a video game that pushes the boundaries of innovation.</p>
+                        <p id="careers_why_text">
+                            Shameless Product Placement is on the hunt for aspiring game creators who are eager to travel to the world of interactive entertainment.
+                            You'll gain hands-on experience as you collaborate to develop a prototype of a video game that pushes the boundaries of innovation.
+                            You'll even walk away with an amazing portfolio piece that highlights your skills.
+                            As a bonus, you'll receive personalized mentorship, a glowing recommendation letter, and huge potential for future employment with us!
+                        </p>
                     </div>
                 </div>
             </div>
