--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
                     <a href="#"><p class="icons"><i class="lni lni-linkedin"></i></p></a>
                 </div>
                 <div id="contact_form">
-                    <form name="contact_form">
+                    <form method="post" action="contact.php" name="contact_form">
                         <input class="contact_form_name" type="text" name="contact_form_first_name" id="contact_form_first_name" placeholder="First name (required)" required>
                         <input class="contact_form_name" type="text" name="contact_form_last_name" id="contact_form_last_name" placeholder="Last name (required)" required>
                         <input class="contact_form_email" type="text" name="contact_form_email" id="contact_form_email" placeholder="Email (required)" required>
