--- a/contact.html
+++ b/contact.html
@@ -47,12 +47,12 @@
                     <a href="#"><p class="icons"><i class="lni lni-linkedin"></i></p></a>
                 </div>
                 <div id="contact_form">
-                    <form method="post" action="contact.php" name="contact_form">
-                        <input class="contact_form_name" type="text" name="contact_form_first_name" id="contact_form_first_name" placeholder="First name (required)" required>
-                        <input class="contact_form_name" type="text" name="contact_form_last_name" id="contact_form_last_name" placeholder="Last name (required)" required>
-                        <input class="contact_form_email" type="text" name="contact_form_email" id="contact_form_email" placeholder="Email (required)" required>
-                        <input class="contact_form_company" type="text" name="contact_form_company" id="contact_form_company" placeholder="Company (if any)">
-                        <textarea class="contact_form_message" name="contact_form_message" id="contact_form_message" rows="10" placeholder="Your message" required></textarea>
+                    <form method="POST" action="https://formsubmit.co/info@shamelesspp.com" name="contact_form">
+                        <input class="contact_form_name" type="text" name="first_name" id="contact_form_first_name" placeholder="First name (required)" required>
+                        <input class="contact_form_name" type="text" name="last_name" id="contact_form_last_name" placeholder="Last name (required)" required>
+                        <input class="contact_form_email" type="text" name="email" id="contact_form_email" placeholder="Email (required)" required>
+                        <input class="contact_form_company" type="text" name="company" id="contact_form_company" placeholder="Company (if any)">
+                        <textarea class="contact_form_message" name="message" id="contact_form_message" rows="10" placeholder="Your message" required></textarea>
                         <input class="contact_form_submit_button" id="contact_form_submit_button" type="submit" value="Submit"/>
                     </form>
                 </div>
